<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoctorActivity">

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:layout_margin="20dp"
       app:cardCornerRadius="10dp">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/teal_200">

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/image_doctor"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginTop="20sp"
               android:src="@drawable/doctor_icon"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/name_txv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="40dp"
               android:text="@string/name"
               android:textSize="20sp"
               android:layout_marginTop="10dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/is_connect"
               app:layout_constraintTop_toBottomOf="@id/image_doctor" />

           <TextView
               android:id="@+id/is_connect"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/online"
               android:textSize="16sp"
               android:layout_marginTop="10dp"
               app:layout_constraintEnd_toStartOf="@+id/name_txv"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/image_doctor" />

           <TextView
               android:id="@+id/info_txv"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="مشاوره فردی،اضطراب ، افسردگی، شغلی و تحصیلی، استعدغاد یابی .."
               android:textSize="16sp"
               android:gravity="center"
               android:layout_marginTop="10dp"
               android:layout_marginHorizontal="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/name_txv"/>
           <com.google.android.material.button.MaterialButton
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/send_message"
               android:layout_marginHorizontal="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toBottomOf="@id/info_txv"/>

       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_choose"
            android:textSize="16sp"
            android:layout_gravity="end"/>
        <LinearLayout
            android:id="@+id/llConsultancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="vertical">
            <TextView
                android:id="@+id/call_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text ="مشاوره تلفنی ده دقیقه ای"/>
            <TextView
                android:id="@+id/price_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                tools:text =" تومان 24000"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>